--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div>
         <div class="flex h-screen">
           <div class="m-auto">
-            <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}' >Noemi e Ivan </p>
+            <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}' >who </p>
             <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio </p>
             <a class="text-center m-2 p-4 font-sans text-white delay-2500 transform duration-2000 ease-in-out translate-x-20 text-opacity-0 border-opacity-0 border border-white" data-replace='{"translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100", "border-opacity-0": "border-opacity-100"}' href="#anchor-name">
                 Leggi la partecipazione
@@ -77,16 +77,16 @@
                 <img class="h-12 w-12" src="./img/anelli.jpeg" alt="Matrimonio Noemi e Ivan">
              </div>
             <div class="p-4 text-white">
-                <div class="text-xl">Chiesa di Nomadelfia</div>
-                <p class="text-slate-200">58100, Grosseto</p>
-                <p class="text-slate-200">h: 11.00</p>
+                <div class="text-xl">Where?? </div>
+                <p class="text-slate-200"></p>
+                <p class="text-slate-200"></p>
             </div>
             <div class="p-2 text-white">
-                <div class="text-xl">Pranzo</div>
+                <div class="text-xl">When</div>
                 <p class="text-slate-200"> 11.00</p>
             </div>
             <div class="p-2 text-white">
-                <div class="text-xl">confermate</div>
+                <div class="text-xl"></div>
             </div>
             <div class="p-2 text-white">
                 <div class="text-xl">Lo Sposo</div>
