--- a/index.html
+++ b/index.html
@@ -64,36 +64,36 @@
     <div>
         <div class="flex h-screen">
           <div class="m-auto">
-            <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}' >who </p>
+            <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>who </p>
             <p class="text-center m-2 p-4 text-6xl font-sans text-white delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio </p>
-            <a class="text-center m-2 p-4 font-sans text-white delay-2500 transform duration-2000 ease-in-out translate-x-20 text-opacity-0 border-opacity-0 border border-white" data-replace='{"translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100", "border-opacity-0": "border-opacity-100"}' href="#anchor-name">
-                Leggi la partecipazione
-            </a>
-          </div>
+            <div class="text-center m-2 font-sans text-white delay-2500 transform-all duration-2000 ease-in-out translate-x-20 text-opacity-0" data-replace='{"translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>
+              <a class="p-3" href="#anchor-name">Leggi la partecipazione</a>
+            </div>
+           </div>
         </div>
 
-        <div id="anchor-name" class="p-4 max-w-sm mx-auto bg-cyan-700 rounded-xl shadow-lg shadow-black items-center">
-             <div>
-                <img class="h-12 w-12" src="./img/anelli.jpeg" alt="Matrimonio Noemi e Ivan">
-             </div>
-            <div class="p-4 text-white">
-                <div class="text-xl">Where?? </div>
-                <p class="text-slate-200"></p>
-                <p class="text-slate-200"></p>
-            </div>
-            <div class="p-2 text-white">
-                <div class="text-xl">When</div>
-                <p class="text-slate-200"> 11.00</p>
-            </div>
-            <div class="p-2 text-white">
-                <div class="text-xl"></div>
-            </div>
-            <div class="p-2 text-white">
-                <div class="text-xl">Lo Sposo</div>
-            </div>
-            <div class="p-2 text-white">
-                <div class="text-xl">La Sposa</div>
-            </div>
+        <div class="flex h-screen" id="anchor-name">
+            <div class="m-auto container">
+             <div class="p-4 bg-cyan-700 rounded-xl shadow-lg shadow-black items-center">
+<!--                 <div class="p-2">-->
+<!--                    <img src="./img/anelli.jpeg" alt="Matrimonio ">-->
+<!--                 </div>-->
+                <div class="p-2 text-center text-white">
+                    <p class="text-xl"> 05 Giugno 2032</p>
+                </div>
+                <div class="p-2 text-center text-white">
+                    <p class="text-xl"> Ore 11.00 - Chiesa San Severino </p>
+                </div>
+                <div class="p-2 text-center text-white">
+                    <div class="text-xl">E' gradita conferma</div>
+                </div>
+
+                 <div class="grid grid-cols-1 sm:grid-cols-2  gap-4">
+                     <div class="text-center text-white">Lo Sposo</div>
+                     <div class="text-center text-white">La Sposa</div>
+                 </div>
+        </div>
+        </div>
         </div>
     </div>
 </body>
