--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <title>Matrimonio Ivan&Noemi</title>
-    <link href="https://fonts.googleapis.com/css?family=Parisienne:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fondamento:400,700&display=swap" rel="stylesheet">
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             var replacers = document.querySelectorAll('[data-replace]');
@@ -25,25 +25,25 @@
 <body >
 
 <div class="bg-cyan-800">
-    <div class="flex flex-col rounded p-2 items-center justify-center space-y-8 h-screen text-white">
+    <div class="flex flex-col rounded p-2 items-center justify-center space-y-16 h-screen text-white">
         <div class="text-6xl delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>Ivan e Noemi</div>
-        <div class="text-1xl delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio</div>
+        <div class="text-2xl delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio</div>
         <div class="mt-4">
             <a class="p-2 border border-white border rounded-md hover:text-cyan-700 hover:bg-white hover:border-transparent" href="#anchor-name">Leggi la partecipazione</a>
         </div>
     </div>
 
-    <div class="h-screen items-center justify-center flex" id="anchor-name">
-        <div class="flex flex-col justify-center items-center space-y-6 text-center w-3/4 p-4 text-white rounded-xl shadow-lg shadow-black bg-cyan-700">
+    <div class="h-screen items-center justify-center flex text-white" id="anchor-name">
+        <div class="flex flex-col justify-center items-center space-y-8 text-center w-3/4 p-4  rounded-xl shadow-lg shadow-black bg-cyan-700">
             <div>
-                <h1>05 Giugno 2022</h1>
-                <h3> h 11.00 </h3>
+                <h1 class="text-4xl"> 05 Giugno 2022</h1>
+                <h3 class="text-xl"> h 11.00 </h3>
             </div>
-             <img class="w-1/3" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">
+             <img class="w-1/3 max-w-md" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">
 
             <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
                 <div>
-                    <h2>Chiesa Santa Maria Assunta</h2>
+                    <h2 class="text-xl" >Chiesa Santa Maria Assunta</h2>
                     <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" class="flex justify-center space-x-2" target="_blank" rel="noopener noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-4" fill="none"
                              viewBox="0 0 24 24" stroke="currentColor">
@@ -59,7 +59,7 @@
                 </div>
 
                 <div>
-                    <h2>Ricevimento presso "Rettangolone"</h2>
+                    <h2 class="text-xl">Ricevimento presso "Rettangolone"</h2>
                     <h3>Nomadelfia, Grosseto.</h3>
                 </div>
             </div>
