--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 <body >
 
 <div class="bg-cyan-800">
-    <div class="flex flex-col rounded p-2 items-center justify-center space-y-16 h-screen text-white">
-        <div class="text-6xl delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>Ivan e Noemi</div>
-        <div class="text-2xl delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio</div>
-        <div class="mt-4">
+    <div class="flex flex-col rounded p-2 items-center justify-center space-y-8 h-screen text-white p-2">
+        <div class="text-white  text-4xl delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>Ivan e Noemi</div>
+        <div class="text-white  text-2xl delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio</div>
+        <div class="text-white  mt-4 delay-2500 transform-all duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>
             <a class="p-2 border border-white border rounded-md hover:text-cyan-700 hover:bg-white hover:border-transparent" href="#anchor-name">Leggi la partecipazione</a>
         </div>
     </div>
 
-    <div class="h-screen items-center justify-center flex text-white" id="anchor-name">
-        <div class="flex flex-col justify-center items-center space-y-8 text-center w-3/4 p-4  rounded-xl shadow-lg shadow-black bg-cyan-700">
+    <div class="h-screen flex items-center justify-center text-white" id="anchor-name">
+        <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center p-2 rounded-xl shadow-lg shadow-black bg-cyan-700">
             <div>
-                <h1 class="text-4xl"> 05 Giugno 2022</h1>
+                <h1 class="text-2xl"> 05 Giugno 2022</h1>
                 <h3 class="text-xl"> h 11.00 </h3>
             </div>
              <img class="w-1/3 max-w-md" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">
