--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="h-screen flex items-center justify-center text-white" id="anchor-name">
-        <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center p-2 rounded-xl shadow-lg shadow-black bg-cyan-700">
+        <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center md:p-6 p-2 rounded-xl shadow-lg shadow-black bg-cyan-700">
             <div>
                 <h1 class="text-2xl"> 05 Giugno 2022</h1>
                 <h3 class="text-xl"> h 11.00 </h3>
@@ -44,7 +44,7 @@
             <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
                 <div>
                     <h2 class="text-xl" >Chiesa Santa Maria Assunta</h2>
-                    <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" class="flex justify-center space-x-2" target="_blank" rel="noopener noreferrer">
+                    <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" class="flex justify-center space-x-2 pb-2" target="_blank" rel="noopener noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-4" fill="none"
                              viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -52,14 +52,14 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
                         </svg>
-                    <span>Nomadelfia, Grosseto.</span>
+                        <span>Nomadelfia, Grosseto.</span>
                     </a>
 
 
                 </div>
 
                 <div>
-                    <h2 class="text-xl">Ricevimento presso "Rettangolone"</h2>
+                    <h2 class="text-xl pb-1">Ricevimento presso "Rettangolone"</h2>
                     <h3>Nomadelfia, Grosseto.</h3>
                 </div>
             </div>
@@ -69,12 +69,12 @@
 
             </div>
 
-            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-x-0 space-y-4 m-1">
-                <div class="space-x-2 p-2">
-                    <h2>Lo sposo</h2>
+            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
+                <div class="space-y-2">
+                    <h2 class="text-xl">Lo sposo</h2>
                     <div>
-                        <a href="tel:+393920734472" class="flex justify-center space-x-1" target="_blank" rel="noopener noreferrer">
-                          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 md:w-6"
+                        <a href="tel:+393920734472" target="_blank" rel="noopener noreferrer">
+                          <svg xmlns="http://www.w3.org/2000/svg" class="w-4 w-6 inline-block"
                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
@@ -95,8 +95,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="space-x-2 p-2">
-                    <h2>La sposa</h2>
+                <div class="space-y-2">
+                    <h2 class="text-xl">La sposa</h2>
                     <div>
                         <a href="tel:+393927776033" target="_blank" rel="noopener noreferrer">
                              <span>
