--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
                 <div>
                     <h2 class="text-xl" >Chiesa Santa Maria Assunta</h2>
-                    <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" class="flex justify-center space-x-2 pb-2" target="_blank" rel="noopener noreferrer">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4" fill="none"
+                    <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" target="_blank" rel="noopener noreferrer">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-4 inline-block" fill="none"
                              viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"/>
