--- a/index.html
+++ b/index.html
@@ -4,48 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
-    <title>Matrimonio Ivan&Noemi</title>
+    <title>Andrea&MariaGrazia</title>
     <link href="https://fonts.googleapis.com/css?family=Fondamento:400,700&display=swap" rel="stylesheet">
-    <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            var replacers = document.querySelectorAll('[data-replace]');
-            for (var i = 0; i < replacers.length; i++) {
-                let replaceClasses = JSON.parse(replacers[i].dataset.replace.replace(/'/g, '"'));
-
-                Object.keys(replaceClasses).forEach(function (key) {
-                    console.log("replacing: " + key);
-                    replacers[i].classList.remove(key);
-                    replacers[i].classList.add(replaceClasses[key]);
-                });
-            }
-        });
-    </script>
     <link href="/dist/output.css" rel="stylesheet">
 </head>
-<body >
+<body>
 
-<div class="bg-cyan-800">
-    <div class="flex flex-col rounded p-2 items-center justify-center space-y-16 h-screen text-white p-2">
-        <div class="text-white  text-6xl delay-75 transform duration-2000 ease-in-out text-opacity-0" data-replace='{"text-opacity-0": "text-opacity-100"}'>Ivan e Noemi</div>
-        <div class="text-white  text-2xl delay-1500 transform duration-2000 ease-in-out -translate-x-20 text-opacity-0" data-replace='{"-translate-x-20": "translate-x-0", "text-opacity-0": "text-opacity-100"}'>Annunciano il loro matrimonio</div>
-        <div class="text-white p-2 mt-4 delay-2500 transform-all duration-2000 ease-in-out text-opacity-0 border border-transparent rounded-md" data-replace='{"text-opacity-0": "text-opacity-100", "border-transparent": "border-current"}'>
-<!--            <a class="p-2 border border-white border-opacity-0 transition border rounded-md hover:text-cyan-700 hover:bg-white hover:border-transparent" data-replace='{"border-opacity-0": "border-opacity-100"}' href="#anchor-name">Leggi la partecipazione</a>-->
-            <a class="hover:text-cyan-600" href="#anchor-name">Leggi la partecipazione</a>
-        </div>
 
-    </div>
+<div class="bg-green-50">
 
-    <div class="h-screen flex items-center justify-center text-white" id="anchor-name">
-        <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center md:p-6 p-2 rounded-xl shadow-lg shadow-black bg-cyan-700">
+    <div class="h-screen flex items-center justify-center text-green-800" id="anchor-name">
+
+        <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center p-8 rounded-xl shadow-md shadow-black-800 bg-white">
+            <h1 class="text-4xl  text-opacity-100">Andrea & Maria Grazia</h1>
+            <h2 class="text-2xl md:text-2xltranslate-x-0 text-opacity-100" >annunciano il loro matrimonio</h2>
             <div>
-                <h1 class="text-2xl"> 05 Giugno 2022</h1>
-                <h3 class="text-xl"> h 11.00 </h3>
+                <div class="grid gap-2 grid-cols-3">
+                    <div class="col-span-3">OTTOBRE</div>
+                    <div class="border-y-2 border-green-800">DOMENICA</div>
+                    <h1 class="text-2xl">29</h1>
+                    <div class="border-y-2 border-green-800" >ORE 11.00</div>
+                    <div class="col-span-3">2023</div>
+                </div>
             </div>
-             <img class="w-1/3 max-w-md" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">
+<!--             <img class="w-1/3 max-w-md" src="/img/anelli.png" alt="Matrimonio Andrea&MariaGrazia">-->
+             <img class="w-2/3 max-w-md" src="/img/foglie.jpeg" alt="Matrimonio Andrea&MariaGrazia">
 
             <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
                 <div>
-                    <h2 class="text-xl" >Chiesa Santa Maria Assunta</h2>
+                    <h2 class="text-xl">Chiesa Santa Maria Assunta</h2>
                     <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" target="_blank" rel="noopener noreferrer">
                         <svg xmlns="http://www.w3.org/2000/svg" class="w-4 inline-block" fill="none"
                              viewBox="0 0 24 24" stroke="currentColor">
@@ -54,21 +41,13 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"/>
                         </svg>
-                        <span>Nomadelfia, Grosseto.</span>
+                        <span>A NOMADELFIA</span>
                     </a>
-
-
-                </div>
-
-                <div>
-                    <h2 class="text-xl pb-1">Ricevimento presso "Rettangolone"</h2>
-                    <h3>Nomadelfia, Grosseto.</h3>
                 </div>
             </div>
 
             <div>
                 <h2>E' gradita gentile conferma</h2>
-
             </div>
 
             <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
@@ -81,7 +60,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                   d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                           </svg>
-                            <span>+39 392 073 4472 </span>
+                            <span>+39 335 693 7494</span>
                         </a>
                     </div>
                     <div>
@@ -107,7 +86,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                           d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
                                   </svg>
-                                  +39 392 777 6033
+                                  +39 370 310 9224
                              </span>
                         </a>
                     </div>
@@ -155,9 +134,9 @@
 
 <!--                    <p class="py-1 text-white text-xl"> h: 11.00</p>-->
 <!--                    <div class="bg-cyan-300">-->
-<!--                        <img class="object-scale-down h-48 w-96" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">-->
+<!--                        <img class="object-scale-down h-48 w-96" src="/img/anelli.png" alt="Matrimonio Andrea&MariaGrazia">-->
 <!--                    </div>-->
-<!--                    <img class="py-4" src="/img/anelli.png" alt="Matrimonio Ivan&Noemi ">-->
+<!--                    <img class="py-4" src="/img/anelli.png" alt="Matrimonio Andrea&MariaGrazia">-->
 <!--                    <div class="py-2 text-white">-->
 <!--                        <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" target="_blank" rel="noopener noreferrer">-->
 <!--                            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 inline-block" fill="none"-->
