--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <title>Andrea&MariaGrazia</title>
     <link href="https://fonts.googleapis.com/css?family=Fondamento:400,700&display=swap" rel="stylesheet">
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="dist/output.css" rel="stylesheet">
 </head>
 <body>
 
