--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                     <div class="col-span-3">2023</div>
                 </div>
             </div>
-<!--             <img class="w-1/3 max-w-md" src="/img/anelli.png" alt="Matrimonio Andrea&MariaGrazia">-->
-             <img class="w-2/3 max-w-md" src="/img/foglie.jpeg" alt="Matrimonio Andrea&MariaGrazia">
+             <img class="w-2/3 max-w-md" src="img/foglie.jpeg" alt="Matrimonio Andrea&MariaGrazia">
 
             <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
                 <div>
