fix tel + space at top

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="bg-green-50">
-    <div class="h-screen flex items-center justify-center text-green-800" id="anchor-name">
+    <div class=" flex items-center justify-center text-green-800" id="anchor-name">
 
         <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center p-8 rounded-xl shadow-md shadow-black-800 bg-white">
             <h1 class="text-4xl  text-opacity-100">Andrea & Maria Grazia</h1>
@@ -50,7 +50,7 @@
                 <div class="space-y-2">
                     <h2 class="text-xl">Lo sposo</h2>
                     <div>
-                        <a href="tel:+393920734472" target="_blank" rel="noopener noreferrer">
+                        <a href="tel:+393356937494" target="_blank" rel="noopener noreferrer">
                           <svg xmlns="http://www.w3.org/2000/svg" class="w-4 w-6 inline-block"
                                fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -60,7 +60,7 @@
                         </a>
                     </div>
                     <div>
-                    <a href="https://wa.me/393920734472" target="_blank" rel="noopener noreferrer">
+                    <a href="https://wa.me/393356937494" target="_blank" rel="noopener noreferrer">
                          <span>
                              <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6 inline-block"
                                   fill="none" viewBox="0 0 50 50" stroke="currentColor">
@@ -75,7 +75,7 @@
                 <div class="space-y-2">
                     <h2 class="text-xl">La sposa</h2>
                     <div>
-                        <a href="tel:+393927776033" target="_blank" rel="noopener noreferrer">
+                        <a href="tel:+393703109224" target="_blank" rel="noopener noreferrer">
                              <span>
                                   <svg xmlns="http://www.w3.org/2000/svg" class="mr-2 h-6 w-6 inline-block"
                                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
