--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 </head>
 <body>
 <div class="bg-green-50">
-    <div class=" flex items-center justify-center text-green-800" id="anchor-name">
-
+    <div class="flex items-center justify-center text-green-800" id="anchor-name">
         <div class="flex flex-col justify-center items-center space-y-8 w-5/6 text-center p-8 rounded-xl shadow-md shadow-black-800 bg-white">
             <h1 class="text-4xl  text-opacity-100">Andrea & Maria Grazia</h1>
-            <h2 class="text-2xl md:text-2xltranslate-x-0 text-opacity-100" >annunciano il loro matrimonio</h2>
+            <h2 class="text-2xl md:text-2xltranslate-x-0 text-opacity-100" >Annunciano il loro matrimonio  </h2>
             <div>
                 <div class="grid gap-2 grid-cols-3">
                     <div class="col-span-3">OTTOBRE</div>
@@ -98,6 +97,21 @@
                              </span>
                         </a>
                     </div>
+                </div>
+            </div>
+
+            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
+                <div class="space-y-2">
+                    <p class="border-y-2 border-green-800 text-l">
+                        La nostra idea è che per sposarsi non servano tanti soldi ma solo tanta voglia di dire SI alla chiamata del Signore e l'uno al cuore dell'altra.
+                        <br>
+                        Il pensiero più bello che possiate farci è essere con noi nel nostro grande giorno, ma se gradite farci un REGALO,
+                        <br>
+                        preferiamo metterlo nel salvadanaio per portarvi con noi nel cammino.
+                        <br>
+                        In questo caso ci aiutereste anche ad avere un viaggio di nozze da sogno e sareste parte dei primi ricordi di quello che invece sarà il nostro intero Viaggio.
+                    </p>
+
                 </div>
             </div>
         </div>
