remove sentence regali

--- a/index.html
+++ b/index.html
@@ -100,20 +100,12 @@
                 </div>
             </div>
 
-            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
-                <div class="space-y-2">
-                    <p class="border-y-2 border-green-800 text-l">
-                        La nostra idea è che per sposarsi non servano tanti soldi ma solo tanta voglia di dire SI alla chiamata del Signore e l'uno al cuore dell'altra.
-                        <br>
-                        Il pensiero più bello che possiate farci è essere con noi nel nostro grande giorno, ma se gradite farci un REGALO,
-                        <br>
-                        preferiamo metterlo nel salvadanaio per portarvi con noi nel cammino.
-                        <br>
-                        In questo caso ci aiutereste anche ad avere un viaggio di nozze da sogno e sareste parte dei primi ricordi di quello che invece sarà il nostro intero Viaggio.
-                    </p>
-
-                </div>
-            </div>
+<!--            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">-->
+<!--                <div class="space-y-2">-->
+<!--                    <p class="border-y-2 border-green-800 text-l">-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </div>
 <div>
