--- a/index.html
+++ b/index.html
@@ -100,12 +100,32 @@
                 </div>
             </div>
 
-<!--            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">-->
-<!--                <div class="space-y-2">-->
-<!--                    <p class="border-y-2 border-green-800 text-l">-->
-<!--                    </p>-->
-<!--                </div>-->
-<!--            </div>-->
+            <img class="w-2/3 max-w-md" src="img/timeline.jpeg" alt="Timeline della giornata">
+
+
+            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
+                <div class="space-y-2">
+                    <p class="font-normal">
+                        Se hai intolleranze alimentari  o allergie ti preghiamo di farcelo sapere.
+                    </p>
+                </div>
+            </div>
+
+            <div class="md:flex md:justify-evenly md:space-y-0 md:space-x-16 space-y-4 m-1">
+                <div class="space-y-2">
+                    <p class="text-l">
+                        Se in occasione del nostro matrimonio hai considerato di farci un regalo, <br>
+                        vogliamo metterti al corrente che la forma più gradita per noi sarebbe
+                        riceverlo come donazione di una somma di denaro. <br>
+                        Questo ci permetterebbe di gestire al meglio le necessità che incontreremo all’inizio del nostro cammino. <br>
+                        Tuttavia, la tua presenza è ciò che conta di più per noi.
+                    </p>
+                    <p>Maria Grazia e Andrea</p>
+                    <p> IBAN: IT22Z0200832974001505702320 </p>
+                    <p> Causale: Regalo nozze </p>
+                    <p> Intestatario: Maria Grazia Neri </p>
+                </div>
+            </div>
         </div>
     </div>
 <div>
