--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
              <img class="w-2/3 max-w-md" src="img/foglie.jpeg" alt="Matrimonio Andrea&MariaGrazia">
 
-            <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-8 space-x-0 ">
+            <div class="md:flex md:justify-between md:items-center md:space-y-0 md:space-x-16 space-y-4 space-x-0 ">
                 <div>
                     <h2 class="text-xl">Chiesa Santa Maria Assunta</h2>
                     <a href="https://goo.gl/maps/q78mZZ1ZVT6yhwef6" target="_blank" rel="noopener noreferrer">
@@ -100,27 +100,24 @@
                 </div>
             </div>
 
+
+
+            <h1 class="text-xl">Il programma della giorntata</h1>
             <img class="w-2/3 max-w-md" src="img/timeline.jpeg" alt="Timeline della giornata">
 
-
-            <div class="md:flex md:justify-evenly md:items-center md:space-y-0 md:space-x-16 space-y-4 m-1">
-                <div class="space-y-2">
-                    <p class="font-normal">
-                        Se hai intolleranze alimentari  o allergie ti preghiamo di farcelo sapere.
-                    </p>
-                </div>
-            </div>
+            <p class="text-xs">(*) Se hai intolleranze alimentari  o allergie ti preghiamo di farcelo sapere.</p>
 
             <div class="md:flex md:justify-evenly md:space-y-0 md:space-x-16 space-y-4 m-1">
                 <div class="space-y-2">
-                    <p class="text-l">
+                    <h1 class="text-xl">Il regalo</h1>
+                    <p class="text-md">
                         Se in occasione del nostro matrimonio hai considerato di farci un regalo, <br>
                         vogliamo metterti al corrente che la forma più gradita per noi sarebbe
                         riceverlo come donazione di una somma di denaro. <br>
                         Questo ci permetterebbe di gestire al meglio le necessità che incontreremo all’inizio del nostro cammino. <br>
-                        Tuttavia, la tua presenza è ciò che conta di più per noi.
+                        Tuttavia, la tua presenza è ciò che conta di più per noi. <br>
                     </p>
-                    <p>Maria Grazia e Andrea</p>
+
                     <p> IBAN: IT22Z0200832974001505702320 </p>
                     <p> Causale: Regalo nozze </p>
                     <p> Intestatario: Maria Grazia Neri </p>
